--- a/wp-content/themes/fr-starter-theme/resources/styles/modules/_wysiwyg.scss
+++ b/wp-content/themes/fr-starter-theme/resources/styles/modules/_wysiwyg.scss
@@ -112,7 +112,7 @@
 
 .wysiwyg-content{
     p{
-        &:last-of-type{
+        &:last-child{
             margin-bottom: 0;
         }
     }
